--- a/DataTest/DataTest.csproj
+++ b/DataTest/DataTest.csproj
@@ -45,9 +45,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Udger.Parser">
-      <HintPath>..\UdgerParser\bin\Debug\Udger.Parser.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -55,6 +52,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Udger.Core\Udger.Core.xproj">
+      <Project>{571f9dcc-2727-4f75-a0df-e75f66e8bd0f}</Project>
+      <Name>Udger.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
